meta-lead-ads-package/main/default/objects/Meta_Lead_Log__c/Meta_Lead_Log__c.object-meta.xml
<CustomObject>
    <label>Meta Lead Log</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meta Lead Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>