meta-lead-ads-package/main/default/objects/Meta_Lead_Log__c/fields/Last_Retry_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Retry_Date__c</fullName>
    <description>The exact timestamp of the last retry attempt.</description>
    <label>Last Retry Date</label>
    <type>DateTime</type>
</CustomField>