meta-lead-ads-package/main/default/objects/Meta_Lead_Log__c/fields/Lead_Payload__c.field-meta.xml
<CustomField>
    <fullName>Lead_Payload__c</fullName>
    <label>Lead Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>