meta-lead-ads-package/main/default/objects/Meta_Lead_Log__c/fields/Meta_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Meta_Lead_ID__c</fullName>
    <label>Meta Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>