meta-lead-ads-package/main/default/objects/Meta_Lead_Log__c/fields/Page_ID__c.field-meta.xml
<CustomField>
    <fullName>Page_ID__c</fullName>
    <label>Page ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>