meta-lead-ads-package/main/default/objects/Meta_Lead_Log__c/fields/Raw_Lead_Data__c.field-meta.xml
<CustomField>
    <fullName>Raw_Lead_Data__c</fullName>
    <label>Raw Lead Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>