meta-lead-ads-package/main/default/objects/Meta_Lead_Log__c/fields/Retried_By__c.field-meta.xml
<CustomField>
    <fullName>Retried_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who retried the lead creation.</description>
    <label>Retried By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Meta_Lead_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>